# test

./: partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/hcsr04/include/: hcsr04.h
main/hcsr04/src/: hcsr04.c
main/i2s/include/: i2s_recorder.h
main/i2s/src/: i2s_recorder.c
main/oled/include/: oled.h
main/oled/src/: oled.c
main/rtsp/: esp32cam.cpp
main/rtsp/include/: CRtspSession.h  CStreamer.h  OV5640.h  OV5640Streamer.h  platglue-esp-idf.h  platglue.h
main/rtsp/src/: CRtspSession.cpp  CStreamer.cpp  OV5640.cpp  OV5640Streamer.cpp
